# softserve-agentx

./: .env.example  .gitattributes  .gitignore  .impeccable.md  AGENTS_USE.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  QUICKGUIDE.md  README.md  SCALING.md  SECURITY.md  docker-compose.yml  index.html
.github/workflows/: ci.yml
backend/: Dockerfile  agent-config.yaml  clear_db.py  pyproject.toml  run_local.py
backend/knowledge-base/: api-routes.json  architecture.md  error-patterns.json  index.json
backend/knowledge-base/modules/: auth.md  cart.md  customer.md  fulfillment.md  inventory.md  notification.md  order.md  payment.md  pricing.md  product.md
backend/src/: agent_config.py  config.py  main.py
backend/src/agents/: base.py  intake.py  orchestrator.py  router.py  triage.py
backend/src/agents/tools/: codebase.py  email_template.py  email_tool.py  files.py  linear_tool.py  slack_tool.py
backend/src/api/: escalation.py  incidents.py  metrics.py  webhooks.py
backend/src/db/: database.py  init.sql
backend/src/models/: incident.py  schemas.py
backend/src/observability/: langfuse_client.py  logging.py
backend/src/security/: guardrails.py  validation.py
backend/tests/: conftest.py  test_output_parsing.py  test_state_machine.py  test_validation.py
docs/: AGENTS_USE.md  QandA.md  assignment.md  challenge.md  resources.md  rules.md
docs/context/: assignment.md  deliverables.md  official_rules.md  resources_for_hackathon.md  technical_requirements.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
(+13 files in other folders)
